[GH-32] build: fix native compile